# b3_2d

./: .gitignore  README.md  admin.sh  pyproject.toml
.github/workflows/: ci.yml
examples/: draped.vtk  mesh_3web_example.py  mesh_example.py
src/b3_2d/: __init__.py
src/b3_2d/cli/: __init__.py  cli.py  main.py
src/b3_2d/cli/commands/: anba_all.py  anba_plot.py  anba_single.py  mesh.py  plot.py  span_plot.py
src/b3_2d/core/: __init__.py  b3_2d_step.py  bom.py  bom_plotting.py  mesh.py  plotting.py  span_plotting.py
src/b3_2d/state/: __init__.py  b3_2d_anba.py  b3_2d_mesh.py  b3_2d_post.py
src/b3_2d/statesman/: __init__.py  b3_2d_step.py
tests/: __init__.py  conftest.py  test_b3_2d_anba.py  test_b3_2d_mesh.py  test_b3_2d_post.py  test_cli.py  test_example.py  test_mesh.py  test_plotting.py  test_statesman.py
