[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b3_2d"
version = "0.1.1"
description = "2D meshing module for b3m using cgfoil"
authors = [{name = "wr1", email = "8971152+wr1@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyvista",
    "cgfoil",# @ git+https://github.com/wr1/cgfoil.git",
    "pydantic",
    "treeparse",
    "rich",
    "statesman", # @ git+https://github.com/wr1/statesman.git",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
b3-2d = "b3_2d.cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/b3_2d"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
source = ["src/b3_2d"]

[tool.pytest.ini_options]
addopts = "--cov=src/b3_2d --cov-report=term-missing"
